--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "express": "^4.19.2",
     "mongodb": "^6.7.0",
     "mongoose": "^8.4.3",
-    "nodemailer": "^6.9.14"
+    "nodemailer": "^6.9.14",
+    "typescript": "^5.7.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
